--- a/package.json
+++ b/package.json
@@ -1,24 +1,12 @@
 {
   "name": "angular20-electron-starter",
   "version": "0.0.0",
+  "main": "dist-electron/main.js",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "prettier": {
-    "printWidth": 100,
-    "singleQuote": true,
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
+    "dev": "concurrently \"ng serve\" \"wait-on http://localhost:4200 && tsc -p electron && electron .\"",
+    "build": "ng build && tsc -p electron",
+    "dist": "npm run build && electron-builder"
   },
   "private": true,
   "dependencies": {
@@ -36,12 +24,19 @@
     "@angular/cli": "^20.3.9",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.13.14",
+    "@types/semver": "^7.7.1",
+    "concurrently": "^9.2.1",
+    "electron": "^39.2.7",
+    "electron-builder": "^26.0.12",
+    "electron-updater": "^6.6.2",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "wait-on": "^9.0.3"
   }
 }
