--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
             ],
             "styles": [
               "src/styles.css"
-            ]
+            ],
+            "baseHref": "./"
           },
           "configurations": {
             "production": {
